# truss

./: .droid.yaml  .flake8  .gitattributes  .gitbook.yaml  .gitignore  .gitmodules  .mlc_config.json  .pre-commit-config.yaml  .python-version  .test_durations  .tool-versions  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONSISTENCY_SUMMARY.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  INSTANCE_GROUPS_FEATURE.md  LICENSE  Makefile  PROMOTION_AUTOSCALING_FIX.md  README.md  ROADMAP.md  autodoc.ipynb  autodoc.py  config.bak  context_builder.Dockerfile  docs.py  lf_multi.py  lf_single.py  pyproject.toml  setup.py  tach.toml  test_infer.ipynb  test_instance_groups.py  test_instance_groups_basic.py  trt_notes.txt  ui.py  (+1 more)
baseten-inference-client/: Cargo.toml  README.md  baseten_inference_client.pyi  pyproject.toml
baseten-inference-client/scripts/: compare_latency_openai.py
baseten-inference-client/src/: lib.rs
baseten-inference-client/tests/: conftest.py  test_bindings.py  test_client_embed.py
baseten-performance-client/: .dockerignore  Agent.md  Cargo.toml  Dockerfile  README.md  baseten_inference_client.pyi  baseten_performance_client.pyi  docker-compose.yml  pyproject.toml  test_uuid_optimization.py
baseten-performance-client-typescript/baseten-performance-client/: Cargo.toml  index.d.ts  index.js  package.json  tsconfig.json
baseten-performance-client/core/: Cargo.toml  README.md
baseten-performance-client/node_bindings/: Cargo.toml  README.md  benchmark_results_nodejs.csv  example.js  index.d.ts  index.js  index_debug.js  package-lock.json  package.json
baseten-performance-client/python_bindings/: Cargo.toml  README.md  baseten_performance_client.pyi  pyproject.toml
baseten-performance-client/reverse_proxy/: Cargo.toml  Dockerfile  README.md  config.yaml
baseten-performance-client/scripts/: README_nodejs.md  compare_latency_openai.js  compare_latency_openai.py  continous_latency.py
baseten-performance-client/src/: lib.rs
baseten-performance-client/tests/: test_bindings.py  test_client_embed.py
bei-client/: Cargo.toml  README.md  baseten_inference_client.pyi  bei_client.pyi  pyproject.toml
bei-client/src/: lib.rs
bei-client/tests/: bindings_test.py  client_embed_test.py  test_bindings.py  test_client_embed.py
core/: pyproject.toml
core/tests/: test_config.py
hyper_proxy/: Cargo.toml
hyper_proxy/src/: main.rs
projects/truss_common/: pyproject.toml
projects/truss_server/: pyproject.toml
server/: pyproject.toml
server/tests/: conftest.py
thinker-client/: pyproject.toml
thinker-client/tests/: test_integration.py
trainers-megatron-bridge/server/: Dockerfile  pyproject.toml
trainers/server/: Dockerfile  pyproject.toml  setup.sh
truss/: __init__.py  build.py  cli.py  config.schema.json  constants.py  custom_types.py  decorators.py  docker.py  errors.py  model_framework.py  model_inference.py  multi_truss.py  notebook.py  pyproject.toml  pytest.ini  readme_generator.py  requirement_inference.py  requirements_inference.py  trt_llm.py  truss_config.py  truss_gatherer.py  truss_handle.py  truss_spec.py  types.py  utils.py  validation.py  version.py
truss-bei/: Cargo.toml  pyproject.toml
truss-build/: .tool-versions  pyproject.toml
truss-client-bei/: Cargo.toml  README.md  pyproject.toml
truss-client-bei/src/: lib.rs
truss-client-bei/tests/: client_embed_test.py  test_bindings.py  test_client.py  test_client_embed.py
truss-mktruss/: pyproject.toml
truss-mktruss/tests/: test_model_inference.py
truss-server/: pyproject.toml
truss-server/tests/: conftest.py
truss-shim/: pyproject.toml
truss-shim/truss/: __init__.py
truss-shim/truss_shim/: __init__.py
truss-transfer/: Cargo.toml  README.md  benchmark_latency.py  exampe-bptr-manifest.json  example-bptr-manifest-gcs.json  example-bptr-manifest.json  pyproject.toml
truss-transfer/src/: basetenpointer.rs  bindings.rs  cache.rs  cli.rs  cloud_range_download.rs  config.rs  constants.rs  core.rs  download.rs  download_core.rs  errors.rs  hf_metadata.rs  hf_transfer.rs  lib.rs  metrics.rs  multimodal_processor.rs  secrets.rs  speed_checks.rs  types.rs
truss-transfer/tests/: README.md  benchmark_comparison.py  benchmark_concurrency.py  benchmark_latency.py  test_audio_downloader.py  test_create_bptr.py  test_create_bptr_with_aws.py  test_create_bptr_with_gcs.py  test_create_bptr_with_hf.py
truss-utils/: README.md  pyproject.toml
truss-utils/truss_utils/: s3.py
truss/api/: __init__.py  api.py  definitions.py
truss/base/: constants.py  custom_types.py  errors.py  images.py  llm_config.py  log_watcher.py  pydantic_models.py  trt_llm_config.py  truss_config.py  truss_spec.py  validation.py  vllm_config.py
truss/blob/: blob_backend_registry.py  http_public_blob_backend.py
truss/cli/: __init__.py  auth.py  chains_commands.py  checkpoints_commands.py  cli.py  common.py  console.py  create.py  loops_checkpoint_viewer.py  loops_commands.py  loops_run_metrics_viewer.py  migrate_commands.py  profile_truss_watch.py  proxy_command.py  remote_cli.py  sandbox_commands.py  ssh.py  ssh_commands.py  train.py  train_commands.py  train_metrics_display.py  trainers_commands.py  training_metrics_watcher.py  training_poller.py
truss/config/: trt_llm.py
truss/contexts/: docker_build_setup.py  truss_context.py
truss/environment_inference/: requirements_inference.py
truss/local/: local_config.py  local_config_handler.py
truss/model_frameworks/: __init__.py  custom.py  huggingface_transformer.py  keras.py  lightgbm.py  mlflow.py  pytorch.py  sklearn.py  xgboost.py
truss/multi_truss/: config.py  handle.py  spec.py
truss/patch/: __init__.py  calc_patch.py  custom_types.py  dir_hash.py  dir_signature.py  hash.py  local_truss_patch_applier.py  signature.py  truss_dir_patch_applier.py  types.py  utils.py
truss/public_api/: definitions.py
truss/remote/: README.md  remote_cli.py  remote_factory.py  truss_remote.py
truss/server/: inference_server.py  model_wrapper.py
truss/shared/: __init__.py  log_watcher.py  types.py
truss/templates/: README.md.jinja  (+15 more)
(+1764 files in other folders)
