[workspace]
members = ["core", "python_bindings", "node_bindings"]
resolver = "2"

[workspace.dependencies]
# Shared dependencies
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
once_cell = "1.21"
rand = "0.9.2"
async-trait = "0.1"
