[workspace]
members = ["core", "python_bindings", "node_bindings"]
resolver = "2"

[workspace.dependencies]
# Shared dependencies
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
once_cell = "1.21"
rand = "0.9.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ctor = "0.2"
# Streaming dependencies
async-stream = "0.3"
tokio-stream = "0.1"
pin-project = "1.0"
