[workspace]
members = ["core", "python_bindings", "node_bindings", "reverse_proxy"]
resolver = "2"

[workspace.dependencies]
# Shared dependencies
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
futures = "0.3.31"
once_cell = "1.21.3"
rand = "0.9.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
ctor = "0.6.3"
