[tool.poetry]
authors = ["Bola Malek <bola@baseten.co>"]
description = "truss"
name = "truss-core"
packages = [{ include = "truss", from = "./src" }]
version = "0.0.1"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
blake3 = "^0.3.3"
pyyaml = "^6.0"
pydantic = "^1.10.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core>=1.2.1"]
build-backend = "poetry.core.masonry.api"
