[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thinker-client"
version = "0.1.0"
description = "Lightweight client for the Thinker queue system"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that hit live services (deselect with '-m \"not integration\"')",
]
