[package]
name = "truss_bei_client"
version = "0.0.12"
edition = "2021"

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module", "abi3-py38"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
once_cell = "1.21"

[lib]
name = "truss_bei_client"
crate-type = ["cdylib"]
