[tool.poetry]
name = "truss-build"
version = "0.1.0"
description = "Abstraction to build Docker images for Truss"
authors = ["Truss Maintainers <team@trussml.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "truss", from = "./src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
docker = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
