[package]
name = "truss_client_bei"
version = "0.0.1-rc0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py38"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "stream", "http2", "default-tls"] }
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
once_cell = "1.21"

[lib]
name = "truss_client_bei"
crate-type = ["cdylib"]
