[tool.poetry]
authors = ["Bola Malek <bola@baseten.co>"]
description = "another package"
name = "truss-mktruss"
packages = [{ include = "truss", from = "./src" }]
version = "0.0.1"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
"truss-core" = "*"
tensorflow = { version = "^2.12.0", markers = "sys_platform == 'linux'" }
tensorflow-macos = { version = "^2.12.0", markers = "sys_platform == 'darwin'" }
mlflow = "^2.4.1"
transformers = "^4.30.2"
lightgbm = "^3.3.5"
xgboost = "^1.7.6"
scikit-learn = "^1.2.2"
pandas = "^2.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
"truss-core" = { path = "../truss-core", develop = true }

[build-system]
requires = ["poetry-core>=1.2.1"]
build-backend = "poetry.core.masonry.api"
