[package]
name = "truss_transfer"
version = "0.0.15-rc0"
edition = "2021"

[lib]
name = "truss_transfer"
crate-type = ["cdylib"]  # For PyO3

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
bytes = "1.5"
pyo3 = { version = "0.24.1", features = ["extension-module", "abi3-py38"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.24", features = ["rt-multi-thread", "macros", "fs"] }
rand = "0.9"
fs2 = "0.4"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "stream", "http2", "default-tls", "json"] }
# static linking of openssl, as rustls-tls is failing to build on aaarch64
openssl = { version = "0.10", features = ["vendored"] }
num_cpus = "1.17.0"
# Logging dependencies
log = "0.4"
env_logger = "0.10"
# HuggingFace and utility dependencies
hf-hub = { version = "0.4.3", features = ["tokio","native-tls"] }
glob = "0.3"
thiserror = "1.0"

# Use patch to override the reqwest dependency used by all crates in the dependency tree
[patch.crates-io]
[features]
cli = []

[[bin]]
name = "truss_transfer_cli"
path = "src/lib.rs"  # Assuming this is the CLI entry point
required-features = ["cli"]
