[package]
name = "truss_transfer"
version = "0.0.29"
edition = "2021"

[lib]
name = "truss_transfer"
crate-type = ["cdylib"]  # For PyO3

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
bytes = "1.5"
pyo3 = { version = "0.24.1", features = ["extension-module", "abi3-py38"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "fs"] }
rand = "0.9"
fs2 = "0.4"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "stream", "http2", "rustls-tls", "json"] }
# static linking of openssl, as rustls-tls is failing to build on aaarch64
# openssl = { version = "0.10", features = ["vendored"] }
num_cpus = "1.17.0"
# Logging dependencies
log = "0.4"
env_logger = "0.10"
# HuggingFace and utility dependencies
hf-hub = { git = "https://github.com/michaelfeil/hf-hub", tag = "0.0.1", features = ["tokio","rustls-tls"], default-features = false }
thiserror = "1.0"
glob = "0.3"
url = "2.5"
# Object store for GCS/S3 support - commented out for now due to API compatibility issues
object_store = { version = "0.12.3", features = ["gcp", "aws", "azure"] }
once_cell = "1.21"
memmap2 = "0.9.4"

# Use patch to override the reqwest dependency used by all crates in the dependency tree
[patch.crates-io]
[features]
cli = []

[[bin]]
name = "truss_transfer_cli"
path = "src/lib.rs"  # Assuming this is the CLI entry point
required-features = ["cli"]
