[tool.poetry]
name = "truss-utils"
version = "0.1.0"
description = "Utilities for use in Truss development"
authors = ["Truss Maintainers <team@trussml.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "truss_utils"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
Pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
