[tool.poetry]
authors = ["Bola Malek <bola@baseten.co>"]
description = "another package"
name = "truss"
packages = [{ include = "truss", from = "./src" }]
version = "0.0.1"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
"truss-core" = "*"
"truss-server" = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
"truss-core" = { path = "../core", develop = true }
"truss-server" = { path = "../server", develop = true }




[tool.poetry.group.tests.dependencies]
tensorflow = "^2.12.0"
httpx = "^0.24.1"
mlflow = "^2.4.1"
yaspin = "^2.3.0"
watchfiles = "^0.19.0"
virtualenv = "^20.23.1"
dockerfile = "^3.2.0"
transformers = "^4.30.2"
lightgbm = "^3.3.5"
xgboost = "^1.7.6"
scikit-learn = "^1.2.2"
pandas = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.2.1"]
build-backend = "poetry.core.masonry.api"
