[tool.poetry]
authors = ["Bola Malek <bola@baseten.co>"]
description = "another package"
name = "truss"
packages = [{ include = "truss", from = "./src"}]
version = "0.0.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
truss-core = {version = "^0.0.1a0", source = "test-pypi"}
truss-server = {version = "^0.0.1a0", source = "test-pypi"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
"truss-core" = { path = "../truss-core", develop = true }
"truss-server" = { path = "../truss-server", develop = true }

[tool.poetry.group.test.dependencies]
python-on-whales = "^0.62.0"
nbformat = "^5.9.0"
nbconvert = "^7.6.0"

[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=1.2.1"]
build-backend = "poetry.core.masonry.api"
